Fix - alignment

--- a/admin/css/getting-started.css
+++ b/admin/css/getting-started.css
@@ -63,18 +63,18 @@
 }
 
 .ab-getting-started .panel p {
-	font-size: 19px;
+	font-size: 16px;
 	line-height: 1.7;
 }
 
 .ab-getting-started .intro-wrap p {
-	font-size: 19px;
+	font-size: 16px;
 	line-height: 1.7;
 	text-align: center;
 }
 
 .ab-getting-started .ab-block-middle p {
-	font-size: 19px;
+	font-size: 16px;
 	line-height: 1.7;
 }
 
@@ -209,11 +209,11 @@
 }
 
 .ab-getting-started .footer-wrap {
-	padding: 4% 12% 4% 12%;
+	padding: 4% 15% 4% 15%;
 }
 
 .ab-getting-started .intro-wrap {
-	padding: 4% 12% 1% 12%;
+	padding: 4% 15% 1% 15%;
 }
 
 @media only screen and (max-width:768px) {
@@ -244,7 +244,7 @@
 }
 
 .ab-block-footer p {
-	font-size: 19px;
+	font-size: 16px;
 	line-height: 1.7;
 }
 
@@ -380,7 +380,7 @@
 
 .ab-block-middle {
 	text-align: center;
-	padding: 4% 12% 4% 12%;
+	padding: 4% 15% 4% 15%;
 	border-bottom: 5px solid #f1f2f3;
 }
 .wrap.ab-getting-started {
